external/lmgc90_dev-fortran_lib/src/ChiPy/kernel/wrap_nlgs.h

  
/**
 * @fn void nlgs_ExPrep(char * cvalue1_c)
 * @brief Prepare matrix storage
 *
 * @cond PYDOC
 * python usage : nlgs_ExPrep(storage)
 * @param[in] sotrage (char[30]) : matrix storage
 * @endcond
 *
 * \n prepare the matrix and the RHS of the contact problem
 * in regards of the selected matrix storage:\n 
 * - Exchange_Local_Global (the standard case)
 *  only the diagonal blocks are computed and stored.\n 
 * - Stored_Delassus_Loops (faster but memory expensive)
 *  the complete Delassus matrix is computed.\n 
 *
 * @cond CDOC
 * @param[in] cvalue1_c (char[30]) : matrix storage
 * @endcond
 */
 extern "C" void nlgs_ExPrep(char * cvalue1_c);
/**
 * @fn void nlgs_ExIter(int nb_iter)
 * @brief Execute NLGS iterations over the contact loop
 *
 * @cond PYDOC
 * python usage : nlgs_ExIter(nb_iter)
 * param[in] nb_iter (integer) : number of iterations to do
 * @endcond
 *
 * @cond CDOC
 * param[in] nb_iter (int) : number of iterations to do
 * @endcond
 */
 extern "C" void nlgs_ExIter(int nb_iter);
/**
 * @fn void nlgs_ExPost(void)
 * @brief Run a jacobi iteration with the solution obtained with the NLGS algorithm
 *
 * @cond PYDOC
 * python usage : nlgs_ExPost()
 * @endcond
 */
 extern "C" void nlgs_ExPost(void);
/**
 * @fn int nlgs_AfterIterCheck(void)
 * @brief Control NLGS convergence
 *
 * @cond PYDOC
 * python usage : convergence = nlgs_AfterIterCheck()
 * @return convergence (integer) :
 * @endcond
 *
 * @cond CDOC
 * @return convergence (int) :
 * @endcond
 */
 extern "C" int nlgs_AfterIterCheck(void);
/**
 * @fn void nlgs_DisplayAfterIterCheck(void)
 * @brief Display NLGS convergence results
 *
 * @cond PYDOC
 * python usage : nlgs_DisplayAfterIterCheck()
 * @endcond
 */
 extern "C" void nlgs_DisplayAfterIterCheck(void);
/**
 * @fn void nlgs_NormCheck(void)
 * @brief Active one step norm evolution
 *
 * @cond PYDOC
 * python usage : nlgs_NormCheck()
 * @endcond
 */
 extern "C" void nlgs_NormCheck(void);
/**
 * @fn void nlgs_UpdateTactBehav(void)
 * @brief Update internal parameters of contact lawz for each contact
 *
 * @cond PYDOC
 * python usage : nlgs_UpdateTactBehav()
 * @endcond
 */
 extern "C" void nlgs_UpdateTactBehav(void);
/**
 * @fn void nlgs_SetCheckType(char * cvalue1_c, double rvalue1, double rvalue2)
 * @brief Define numerical convergence of the NLGS algorithm
 *
 * @cond PYDOC
 * python usage : nlgs_SetCheckType(check_type, tolerance, relaxation)
 * @param[in] check_type (char[5]) : type of convergence check
 * @param[in] tolerance (double)   : norm tolerance
 * @param[in] relaxation (double)  : relaxation factor
 * @endcond
 *
 * \n convergence check keywords:\n 
 * Quad  : quadratic norm (faulty contacts are redeemed by accurate
 *         contacts; laxist norm)\n 
 * Maxm  : maximum norm (faulty contacts must comply; severe norm)\n 
 * QM/16 : maximum of Quad and Maxm/16 norms (a compromise). For
 *         large dense collections Quad ranges usually around 1/16 Maxm\n 
 * where Quad,Maxm,QM/16 are keywords for the check test, and the 
 * following real number is the tolerance value.\n 
 *
 * @cond CDOC
 * @param[in] cvalue1_c (char[5]) : type of convergence check
 * @param[in] rvalue1   (double)  : norm tolerance
 * @param[in] rvalue2   (double)  : relaxation factor
 * @endcond
 */
 extern "C" void nlgs_SetCheckType(char * cvalue1_c, double rvalue1, double rvalue2);
/**
 * @fn void nlgs_ScrambleContactOrder(void)
 * @brief Random renumbering of the contact list
 *
 * @cond PYDOC
 * python usage : nlgs_ScrambleContactOrder()
 * @endcond
 */
 extern "C" void nlgs_ScrambleContactOrder(void);
/**
 * @fn void nlgs_QuickScrambleContactOrder(void)
 * @brief Random renumbering of the contact list
 *
 * @cond PYDOC
 * python usage : nlgs_QuickScrambleContactOrder()
 * @endcond
 */
 extern "C" void nlgs_QuickScrambleContactOrder(void);
/**
 * @fn void nlgs_SetWithQuickScramble(void)
 * @brief active quick scramble in macro function ExSolver
 *
 * @cond PYDOC
 * python usage : nlgs_SetWithQuickScramble()
 * @endcond
 */
 extern "C" void nlgs_SetWithQuickScramble(void);
/**
 * @fn void nlgs_ReverseContactOrder(void)
 * @brief Reverse the numbering of the contact list
 *
 * @cond PYDOC
 * python usage : nlgs_ReverseContactOrder()
 * @endcond
 */
 extern "C" void nlgs_ReverseContactOrder(void);
/**
 * @fn void nlgs_BimodalContactOrder(void)
 * @brief Renumbering of the contact list using the definition
 * of weak and strong network in granular assemblies
 *
 * @cond PYDOC
 * python usage : nlgs_BimodalContactOrder()
 * @endcond
 */
 extern "C" void nlgs_BimodalContactOrder(void);
/**
 * @fn void nlgs_ScaleRloc(void)
 * @brief Scale all local contact forces of a factor equal to * 0.9 < f < 1.1
 *
 * @cond PYDOC
 * python usage : nlgs_ScaleRloc()
 * @endcond
 */
 extern "C" void nlgs_ScaleRloc(void);
/**
 * @fn void nlgs_ComputeRnod(void)
 * @brief mapping from local contact forces to global ones
 *
 * @cond PYDOC
 * python usage : nlgs_ComputeRnod()
 * @endcond
 */
 extern "C" void nlgs_ComputeRnod(void);
/**
 * @fn void nlgs_DisplayRlocNSum(void)
 * @brief Display the sum of normal contact forces
 *
 * @cond PYDOC
 * python usage : nlgs_DisplayRlocNSum()
 * @endcond
 */
 extern "C" void nlgs_DisplayRlocNSum(void);
/**
 * @fn void nlgs_ExSolver(char * cvalue1_c, char * cvalue2_c, double rvalue1, double rvalue2, int ivalue1, int ivalue2)
 * @brief Solve fully the local contact problem
 *
 * @cond PYDOC
 * python usage : nlgs_ExSolver(storage, checktype, tol, relax, nb_iter_check, nb_block_iter)
 * @param[in] storage (char[30])      : matrix storage (cf nlgs_ExPrep)
 * @param[in] checktype (char[5])     : convergentce test keyword
 * @param[in] tolerance (double)      : tolerance value
 * @param[in] relaxation (double)     : relaxation number
 * @param[in] nb_iter_check (integer) : number of iteration between convergence test
 * @param[in] nb_block_iter (integer) : number of block iterations
 * @endcond
 *
 * @cond CDOC
 * @param[in] cvalue1 (char[30]) : matrix storage (cf nlgs_ExPrep)
 * @param[in] cvalue2 (char[5])  : convergentce test keyword
 * @param[in] rvalue1 (double)   : tolerance value
 * @param[in] rvalue2 (double)   : relaxation number
 * @param[in] ivalue1 (int)      : number of iteration between convergence test
 * @param[in] ivalue2 (int)      : number of block iterations
 * @endcond
 */
 extern "C" void nlgs_ExSolver(char * cvalue1_c, char * cvalue2_c, double rvalue1, double rvalue2, int ivalue1, int ivalue2);